--- a/TTT.css
+++ b/TTT.css
@@ -18,17 +18,21 @@ body{
 }
   .sqr {
     background-color: antiquewhite;
+    color: black;
+    font-size: 100px;
     width: 160px;
     height: 155px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     vertical-align: middle;
     border: 2px solid black;
   }
-.playerO {
-    color: darkblue;
-    font-size: 50px;
-}
-.playerX {
-    color: blueviolet;
-    font-size: 50px;
-}
+  #resetButton {
+    height: 30px;
+    width: 60px;
+    background-color: black;
+    color: darkcyan;
+    font-size: 16px;
+  }
